# pdf-read

./: Makefile  README.md  __main__.py  config.py  local.env  pyproject.toml  pytest.ini
pdf_read/: __init__.py  config.py  contract_info.py  create_csv.py  create_csv_handler.py  extract_pdf_handler.py  extract_pdf_info.py  handler.py  pdf_detail_handler.py  pdf_to_csv_handler.py  utils.py
tests/: conftest.py  test_contract_info.py  test_pdf_detail_handler.py  test_pdf_to_csv_handler.py  test_utils.py
