[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_local_folder = "utils,tests,pdf_reader"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv --cov-report=term-missing --cov=pdf_reader --cov-branch"
pytestenvvars__env_files = [
    ".env",
]

[tool.poetry]
name = "pdf-reader"
version = "1.0.0"
description = "Read PDF's for all requests to CSV File."
authors = ["Wilson Moraes <wilsontads@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
prettyconf = "*"
pytesseract="*"
"pdfminer.six"="*"
price-parser="*"
pandas="*"

[tool.poetry.dev-dependencies]
coverage = {version = "6.0b1", allow-prereleases = true}
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-envvars = "*"
pytest-randomly = ">=3.5.0,!=3.6.0"
